<resources>
    <string name="app_name">Golden Coupon</string>
    <string name="main">Stores</string>
    <string name="favourite">Favourite</string>
    <string name="menu">Account</string>
    <string name="offers">Products Offer</string>
    <string name="enjoy">Enjoy \u0020 </string>
    <string name="title"> the largest selection of discounts and offers</string>
    <string name="best_brands">Browse Our Best Brands</string>
    <string name="best_products">Browse our best products</string>
    <string name="best_Coupon">Browse our best Coupon</string>
    <string name="coupon">Coupon</string>
    <string name="searchForBrand">Search for your fav brand</string>
    <string name="copy_code">copy code</string>
    <string name="visit_site">Go Shopping</string>
    <string name="times_of_use">times of use</string>
    <string name="buy">buy</string>
    <string name="account">My Account</string>
    <string name="rateApp">Rate App</string>
    <string name="myAccount">My Acc / Create Acc</string>
    <string name="deals">Deals</string>
    <string name="aboutUs">About Golden Coupon</string>
    <string name="terms">Terms of use</string>
    <string name="privacy">Privacy policy</string>
    <string name="attention">Attention!</string>
    <string name="noBrandFound">No Brands Found</string>
    <string name="filter">filter</string>
    <string name="copied">copied</string>
    <string name="price">"product price : \u0020 "</string>
    <string name="priceWithCode">"Price With Code : \u0020 "</string>
    <string name="choseCountry">Chose country</string>
    <string name="sortby">Sort by a brand</string>
    <string name="bestDiscount">Best Discounts</string>
    <string name="name">Name</string>
    <string name="sort" >sort</string>
    <string name="sortbyName" >sort by name</string>
    <string name="logout">logout</string>
    <string name="login">login</string>
    <string name="loginas">login as a guest</string>
    <string name="register">register</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="mobile">mobile</string>
    <string name="email">email</string>
    <string name="choseLanguage">choose language</string>
    <string name="ar">عربي</string>
    <string name="en">English</string>
    <string name="can_change_lang">* يمكنك تغيير اللغة من قائمة حسابي "</string>
    <string name="can_change_lang2">You can change the language from the My Account menu</string>
    <string name="next">next</string>
    <string name="notification">Notification</string>
    <string name="loginFirst">you should login</string>
    <string name="forget">forget password ? </string>
    <string name="send">send</string>
    <string name="contact_us">contact us</string>
    <string name="back">Back</string>
    <string name="createAcc">i want to create an account please..</string>
    <string name="problem">"the coupon not working"</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="report">Report</string>
    <string name="errorincoupon">Is the coupon not working?</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>


</resources>