<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <data>
        <variable
            name="context"
            type="com.codes_roots.golden_coupon.presentation.mainactivity.MainActivity" />
        <variable
            name="listener"
            type="com.codes_roots.golden_coupon.helper.ClickHandler" />

    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
  >




        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/best_brands_title"
                    style="@style/HomeTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/account"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/rateApp"
                    style="@style/menuTitles"
                    android:onClick="@{() -> listener.rateApp(context)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shadow_white_bg"
                    android:drawableEnd="@drawable/left_ic"
                    android:text="@string/rateApp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/best_brands_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/myAccount"
                    style="@style/menuTitles"
                    android:onClick="@{()->listener.switchToLogin(context)}"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shadow_white_bg"
                    android:drawableEnd="@drawable/left_ic"
                    android:text="@string/myAccount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rateApp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/deals"
                    style="@style/menuTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->listener.switchToDealsFragment(context)}"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shadow_white_bg"
                    android:drawableEnd="@drawable/left_ic"
                    android:text="@string/deals"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/myAccount" />



                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lang"
                    style="@style/menuTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shadow_white_bg"
                    android:drawableEnd="@drawable/left_ic"
                    android:onClick="@{()->listener.switchToLanguage(context)}"
                    android:text="@string/choseLanguage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/deals" />

               <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/change_country"
                    style="@style/menuTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shadow_white_bg"
                    android:drawableEnd="@drawable/left_ic"
                    android:onClick="@{()->listener.switchToCountry(context)}"
                    android:text="@string/choseCountry"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lang" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pagesRecycle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:minHeight="100dp"
                    app:layout_constraintHeight_percent="0.5"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/change_country" />


            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.core.widget.NestedScrollView>
        <FrameLayout
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/pagesRecycle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pagesRecycle">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                />
        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
