<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="context"
        type="com.codesroots.goldencoupon.presentation.auth.RegisterActivity" />

    <variable
        name="listener"
        type="com.codesroots.goldencoupon.helper.ClickHandler" />

</data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    >

    <FrameLayout
        android:id="@+id/login_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title">

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/kokn"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text"
            app:layout_constraintWidth_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guid3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.35"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField"
                style="@style/LoginTextStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/shadow_white_bg"
                android:gravity="center"
                android:hint="@string/username"
                app:hintTextColor="@color/red"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guid"
                app:layout_constraintWidth_percent="0.85">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    style="@style/LoginTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:textColorHint="@color/gray" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordfilledTextField"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shadow_white_bg"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guid3"
                app:layout_constraintWidth_percent="0.85">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/LoginTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/forgetPW"
                style="@style/blackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/kokn"
                android:paddingBottom="@dimen/dimen_8"
                android:gravity="center"
                android:onClick="@{()->listener.switchToForgetPWFragment(context)}"
                android:text="@string/forget"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordfilledTextField" />



            <TextView
                android:id="@+id/loginAs"
                style="@style/LoginTextStyle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/border_shape"
                android:gravity="center"
                android:padding="5dp"
                android:onClick="@{()->listener.switchToMainActivity(context)}"
                android:text="@string/loginas"
                android:textColor="@color/red2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login"
                app:layout_constraintWidth_percent="0.45"/>
            <TextView
                android:id="@+id/login"
                style="@style/LoginTextStyle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/border_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/login"
                android:textColor="@color/red2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgetPW"
                app:layout_constraintWidth_percent="0.45"
                 />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
