<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="context"
            type="com.codes_roots.golden_coupon.presentation.mainactivity.MainActivity" />
        <variable
            name="productData"
            type="com.codes_roots.golden_coupon.entites.products.Product" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/coupon_bg"
        android:layout_margin="@dimen/dimen_8"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            app:imageResourcee="@{productData.img}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@android:color/transparent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/brand_name"
            style="@style/blackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@{productData.name}"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageView3"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/brand_description"
            style="@style/grayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:text="@{productData.description}"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/time_of_use"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageView3"
            app:layout_constraintTop_toBottomOf="@+id/brand_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/price"
            style="@style/redText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageView3"
            app:layout_constraintTop_toBottomOf="@+id/brand_description" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/priceWithCode"
            style="@style/redText"
            android:textColor="@color/lightgreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageView3"
            app:layout_constraintTop_toBottomOf="@+id/price" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/time_of_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/HomeTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/offer"
                android:gravity="left"
                android:padding="6dp"
                android:text="15"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/brand_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/circle_bk"
            android:padding="@dimen/dimen_8"
            android:src="@drawable/test"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/copy_button"
            app:layout_constraintTop_toBottomOf="@+id/priceWithCode"
            app:shapeAppearance="@android:color/transparent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/copy_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/copy_button"
            android:gravity="center"
            android:padding="@dimen/dimen_8"
            android:text="@string/copy_code"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/visit_site_button"
            app:layout_constraintTop_toBottomOf="@+id/priceWithCode" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/visit_site_button"
            style="@style/blackText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/site_button"
            android:text="@string/buy"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceWithCode" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</layout>